Начал работу с рунге-куттом

--- a/modules/Кирилл/src/CMakeLists.txt
+++ b/modules/Кирилл/src/CMakeLists.txt
@@ -1,5 +1,5 @@
 set(target ${LIBRARY})
 
-set( srcs methods.cpp euler.cpp )
+set( srcs methods.cpp euler.cpp rungekutta.cpp )
 
 add_library(${target} STATIC ${srcs})
