--- a/modules/Sergey/Euler/CMakeLists.txt
+++ b/modules/Sergey/Euler/CMakeLists.txt
@@ -5,6 +5,6 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
 set(SOURCE_FILES
     src/main.cpp
-    INPUT.txt)
+    ../../../initial/INPUT.txt)
 
 add_executable(heat_distribution_lenf ${SOURCE_FILES})
