--- a/modules/Kirill/RungeKutta/CMakeLists.txt
+++ b/modules/Kirill/RungeKutta/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.6)
-project(Eiler)
+project(RungeKutta)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c11")
 
-set(SOURCE_FILES eiler.c)
+set(SOURCE_FILES rungekutta.c)
 add_executable(${PROJECT_NAME} ${SOURCE_FILES})
