--- a/modules/Kirill/Euler/CMakeLists.txt
+++ b/modules/Kirill/Euler/CMakeLists.txt
@@ -1,7 +1,8 @@
 cmake_minimum_required(VERSION 3.6)
-project(Eiler)
+project(Euler)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c11")
+add_definitions(${CMAKE_CXX_FLAGS})
 
 set(SOURCE_FILES euler.c)
 add_executable(${PROJECT_NAME} ${SOURCE_FILES})
