--- a/modules/Kirill/Euler/CMakeLists.txt
+++ b/modules/Kirill/Euler/CMakeLists.txt
@@ -2,6 +2,14 @@ cmake_minimum_required(VERSION 3.6)
 project(Euler)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c11")
+
+find_package(OpenMP REQUIRED)
+if(OPENMP_FOUND)
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
+    message(STATUS ${CMAKE_CXX_FLAGS})
+endif()
+
 add_definitions(${CMAKE_CXX_FLAGS})
 
 set(SOURCE_FILES euler.c)
