--- a/modules/Kirill/SparseMatrix/CMakeLists.txt
+++ b/modules/Kirill/SparseMatrix/CMakeLists.txt
@@ -1,8 +1,14 @@
 cmake_minimum_required(VERSION 2.8)
 project(SparseMatrix)
 
-set(GCC_COVERAGE_COMPILE_FLAGS "-std=c++14")
-add_definitions(${GCC_COVERAGE_COMPILE_FLAGS})
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
+
+find_package(OpenMP REQUIRED)
+if(OPENMP_FOUND)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_C_FLAGS}")
+endif()
+
+add_definitions(${CMAKE_CXX_FLAGS})
 
 get_filename_component(DIR_NAME ${CMAKE_CURRENT_LIST_DIR} NAME)
 set(MODULE      "${DIR_NAME}")
