--- a/modules/Kirill/SparseMatrix/CMakeLists.txt
+++ b/modules/Kirill/SparseMatrix/CMakeLists.txt
@@ -2,13 +2,16 @@ cmake_minimum_required(VERSION 2.8)
 project(SparseMatrix)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c11")
 
 find_package(OpenMP REQUIRED)
 if(OPENMP_FOUND)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_C_FLAGS}")
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
 endif()
 
 add_definitions(${CMAKE_CXX_FLAGS})
+add_definitions(${CMAKE_C_FLAGS})
 
 get_filename_component(DIR_NAME ${CMAKE_CURRENT_LIST_DIR} NAME)
 set(MODULE      "${DIR_NAME}")
@@ -21,4 +24,4 @@ include_directories("./include")
 
 add_subdirectory(src)
 add_subdirectory(test)
-#add_subdirectory(app)
+add_subdirectory(app)
