--- a/modules/Kirill/SparseMatrix/CMakeLists.txt
+++ b/modules/Kirill/SparseMatrix/CMakeLists.txt
@@ -18,7 +18,7 @@ set(MODULE      "${DIR_NAME}")
 set(LIBRARY     "lib_${MODULE}")
 set(TESTS       "test_${MODULE}")
 set(EULER "euler_${MODULE}")
-set(RUGEKUTT "runge_${MODULE}")
+set(RUNGEKUTT "runge_${MODULE}")
 
 include_directories("./include")
 
