разделил комплексную и вещественную реализацию

--- a/modules/Kirill/Euler/CMakeLists.txt
+++ b/modules/Kirill/Euler/CMakeLists.txt
@@ -10,5 +10,9 @@ endif()
 
 add_definitions(${CMAKE_C_FLAGS})
 
-set(SOURCE_FILES euler.c)
-add_executable(${PROJECT_NAME} ${SOURCE_FILES})
+set( SOURCE_FILES_EX1 euler.c )
+add_executable(${PROJECT_NAME} ${SOURCE_FILES_EX1})
+
+set( SOURCE_FILES_EX2 euler_complex.c )
+add_executable(${PROJECT_NAME}_complex ${SOURCE_FILES_EX1})
+
