разделены исполняемы файлы для комплексного и для вещественного решения

--- a/modules/Kirill/SpMatrix/app/euler/CMakeLists.txt
+++ b/modules/Kirill/SpMatrix/app/euler/CMakeLists.txt
@@ -1,7 +1,10 @@
 set(target ${EULER})
 
-file(GLOB srcs "*.c")
+file(GLOB SOURCE_DOUBLE_EULER "euler_sparse.c")
+add_executable(${target} ${SOURCE_DOUBLE_EULER})
 
-add_executable(${target} ${srcs})
+file(GLOB SOURCE_COMPLEX_EULER "euler_complex_sparse.c")
+add_executable(${target}_complex ${SOURCE_COMPLEX_EULER})
 
 target_link_libraries(${target} ${LIBRARY})
+target_link_libraries(${target}_complex ${LIBRARY})
