--- a/modules/Sergey/Euler/CMakeLists.txt
+++ b/modules/Sergey/Euler/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.6)
 project(heat_distribution_lenf)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -fopenmp")
 
 set(SOURCE_FILES
     src/main.cpp
