--- a/modules/Sergey/SparseMatrix/CMakeLists.txt
+++ b/modules/Sergey/SparseMatrix/CMakeLists.txt
@@ -3,5 +3,5 @@ project(SparseMatrix)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -fopenmp")
 
-set(SOURCE_FILES src/main.cpp src/SparseMatrix.cpp src/SparseMatrix.h )
+set(SOURCE_FILES src/main_Euler.cpp src/SparseMatrix.cpp src/SparseMatrix.h )
 add_executable(SparseMatrix ${SOURCE_FILES})
