Исправлены некоторые недочёты. Подстроено для авто-запуска

--- a/modules/Kirill/SpMatrix/CMakeLists.txt
+++ b/modules/Kirill/SpMatrix/CMakeLists.txt
@@ -25,5 +25,5 @@ set(RUNGEKUTT "runge_${MODULE}")
 include_directories("./include")
 
 add_subdirectory(src)
-add_subdirectory(test)
+# add_subdirectory(test)
 add_subdirectory(app)
