--- a/modules/Kirill/SpMatrix/app/implicitEuler/CMakeLists.txt
+++ b/modules/Kirill/SpMatrix/app/implicitEuler/CMakeLists.txt
@@ -3,3 +3,4 @@ set(target ${IMPLICIT})
 file(GLOB SOURCE_DOUBLE_EULER "implicit_euler_sparse.c")
 add_executable(${target} ${SOURCE_DOUBLE_EULER})
 target_link_libraries(${target} ${LIBRARY})
+target_link_libraries(${target} ${M_LIB})
