--- a/modules/Kirill/SpMatrix/CMakeLists.txt
+++ b/modules/Kirill/SpMatrix/CMakeLists.txt
@@ -21,14 +21,21 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c11")
 endif(UNIX)
 
+###################### OpenMP ###################################
 find_package(OpenMP REQUIRED)
 if(OPENMP_FOUND)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_C_FLAGS}")
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
 endif()
+#################################################################
 
 # math
 find_library( M_LIB m )
+
+######################### MPI ###################################
+find_package( MPI REQUIRED )
+include_directories( ${MPI_INCLUDE_PATH} )
+#################################################################
 
 add_definitions(${CMAKE_CXX_FLAGS})
 add_definitions(${CMAKE_C_FLAGS})
