--- a/modules/Kirill/SpMatrix/app/euler/CMakeLists.txt
+++ b/modules/Kirill/SpMatrix/app/euler/CMakeLists.txt
@@ -3,8 +3,9 @@ set(target2 ${EULER}_complex)
 
 file(GLOB SOURCE_DOUBLE_EULER "euler_sparse.c")
 add_executable(${target} ${SOURCE_DOUBLE_EULER})
-target_link_libraries(${target} ${LIBRARY})
 
+target_link_libraries(${target} ${LIBRARY})
+target_link_libraries(${target} ${MPI_LIBRARIES})
 # file(GLOB SOURCE_COMPLEX_EULER "euler_sparse_comlex.c")
 # add_executable(${target2} ${SOURCE_COMPLEX_EULER})
 
