SparseMatrix Refactoring. Rebase repository struct

--- a/modules/Sergey/SparseMatrix/CMakeLists.txt
+++ b/modules/Sergey/SparseMatrix/CMakeLists.txt
@@ -1,15 +1,10 @@
-cmake_minimum_required(VERSION 3.6)
-project(SparseMatrix)
-
-find_package(OpenMP REQUIRED)
-if(OPENMP_FOUND)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 ${OpenMP_CXX_FLAGS}")
-endif()
-
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+set(target "${APP}_SparseMatrix_Euler")
 
 set(SOURCE_FILES_EULER src/main_Euler.cpp src/SparseMatrix.cpp src/SparseMatrix.h )
-add_executable(${PROJECT_NAME}_Euler ${SOURCE_FILES_EULER})
+add_executable(${target} ${SOURCE_FILES_EULER})
+
+
+set(target "${APP}_SparseMatrix_Runge")
 
 set(SOURCE_FILES_RUNGE src/main_Runge.cpp src/SparseMatrix.cpp src/SparseMatrix.h )
-add_executable(${PROJECT_NAME}_Runge ${SOURCE_FILES_RUNGE})
+add_executable(${target} ${SOURCE_FILES_RUNGE})
