--- a/modules/Sergey/Runge–Kutt/CMakeLists.txt
+++ b/modules/Sergey/Runge–Kutt/CMakeLists.txt
@@ -1,12 +1,4 @@
-cmake_minimum_required(VERSION 3.6)
-project(RungeKutt)
-
-find_package(OpenMP REQUIRED)
-if(OPENMP_FOUND)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 ${OpenMP_CXX_FLAGS}")
-endif()
-
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+set(target "${APP}_Runge_Kutt")
 
 set(SOURCE_FILES src/main.cpp)
-add_executable(RungeKutt ${SOURCE_FILES})
+add_executable(${target} ${SOURCE_FILES})
