--- a/modules/Sergey/Implicit/CMakeLists.txt
+++ b/modules/Sergey/Implicit/CMakeLists.txt
@@ -1,13 +1,4 @@
-cmake_minimum_required(VERSION 3.6)
-project(JacobiMethod)
+set(target "${APP}_Implicit")
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
-
-find_package(OpenMP REQUIRED)
-if(OPENMP_FOUND)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 ${OpenMP_CXX_FLAGS}")
-endif()
-
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/build")
 set(SOURCE_FILES main.cpp SparseMatrix.cpp SparseMatrix.h)
-add_executable(JacobiMethod ${SOURCE_FILES})
+add_executable(${target} ${SOURCE_FILES})
