--- a/modules/Sergey/Euler/CMakeLists.txt
+++ b/modules/Sergey/Euler/CMakeLists.txt
@@ -1,15 +1,6 @@
-cmake_minimum_required(VERSION 3.6)
-project(Euler)
-
-find_package(OpenMP REQUIRED)
-if(OPENMP_FOUND)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 ${OpenMP_CXX_FLAGS}")
-endif()
-
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+set(target "${APP}_Euler")
 
 set(SOURCE_FILES
-    src/main.cpp
-    ../../../initial/INPUT.txt)
+    src/main.cpp)
 
-add_executable(heat_distribution_lenf ${SOURCE_FILES})
+add_executable(${target} ${SOURCE_FILES})
