--- a/modules/Sergey/CMakeLists.txt
+++ b/modules/Sergey/CMakeLists.txt
@@ -7,3 +7,4 @@ add_subdirectory(Euler)
 add_subdirectory(Implicit)
 add_subdirectory(Runge–Kutt)
 add_subdirectory(SparseMatrix)
+add_subdirectory(SparseMatrix_MPI)
