Fix boundaries. Doesnt build cmake

--- a/modules/Sergey/SparseMatrix_MPI/app/CMakeLists.txt
+++ b/modules/Sergey/SparseMatrix_MPI/app/CMakeLists.txt
@@ -1,17 +1,10 @@
 # Эйлер
 set(target "${APP}_Euler")
+find_package( MPI REQUIRED )
+include_directories( ${MPI_INCLUDE_PATH} )
 
 file(GLOB src_euler Euler.cpp)
 
 add_executable(${target} ${src_euler})
 target_link_libraries(${target} ${LIBRARY})
 target_link_libraries(${target} ${MPI_LIBRARIES})
-
-#set(target "${APP}_SparseMatrix_MPI_Euler")
-#
-#set(SOURCE_FILES_EULER
-#        src/SparseMatrix.cpp
-#        )
-#
-#add_executable(${target} ${SOURCE_FILES_EULER})
-#target_link_libraries(${target} ${MPI_LIBRARIES})
